--- a/TestWebAPI/TestWebAPI.csproj
+++ b/TestWebAPI/TestWebAPI.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.35" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.5" />
+    <PackageReference Include="MySql.Data" Version="9.1.0" />
     <PackageReference Include="RestSharp" Version="111.4.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
