--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.35" />
+    <PackageReference Include="MySql.Data" Version="9.1.0" />
     <PackageReference Include="RestSharp" Version="111.4.1" />
   </ItemGroup>
 
